--- a/4-Advanced Topics/Demo/fortune-teller-demo/fortune-teller-ui/src/main/resources/static/fortune.html
+++ b/4-Advanced Topics/Demo/fortune-teller-demo/fortune-teller-ui/src/main/resources/static/fortune.html
@@ -1,5 +1,5 @@
 <div ng-model="fortune">
-    <p>{{fortune.text}}</p>
-    <p>{{powerball.ball1}}, {{powerball.ball2}}, {{powerball.ball3}}, {{powerball.ball4}}, {{powerball.ball5}} </p>
+    <p>[.NET app] {{fortune.text}}</p>
+    <p>[Docker App] {{powerball.ball1}}, {{powerball.ball2}}, {{powerball.ball3}}, {{powerball.ball4}}, {{powerball.ball5}} </p>
     <p>Powerball: {{powerball.powerBall}}</p>
 </div>
