--- a/4-Advanced Topics/Demo/fortune-teller-demo/fortune-teller-ui/src/main/resources/static/index.html
+++ b/4-Advanced Topics/Demo/fortune-teller-demo/fortune-teller-ui/src/main/resources/static/index.html
@@ -12,17 +12,34 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.4/angular-route.min.js"></script>
     <script src="js/app.js"></script>
 </head>
+<style>.wrapper{width:100%;}
+.box{float:left; height:100px;}
+.box:nth-child(1){
+   width:25%;
+   background-color:GhostWhite;
 
+}
+.box:nth-child(2){
+   width:65%;
+  background-color:LightSeaGreen;
+}
+.box:nth-child(3){
+   width:10%;
+  background-color:yellow;
+}
+</style>
 <body>
 
-<div class="jumbotron container">
-    <h1>Franken-Fortune Teller!</h1>
-    <p>Find out what the future holds...</p>
-    <img src="images/Franken-Fortun-Teller.png" alt="Franken-Fortune Teller">
+<div class="wrapper">
+    <div class="box"><img src="images/Franken-Fortun-Teller.png" alt="Franken-Fortune Teller"></div>
+    <div class="jumbotron container box">
+        <h1>Franken-Fortune Teller!</h1>
+        <p>Find out what the future holds...</p>
+        <div ng-view class="container"></div>
+    </div>
+
+    <div class="box"></div>
 </div>
-
-<div ng-view class="container"></div>
-
 
 
 </body>
